--- a/public/css/main.css
+++ b/public/css/main.css
@@ -38,6 +38,8 @@ h4 {
 p {
   color: #cccccc;
   text-decoration: none;
+  font-size: 14px;
+  font-weight: normal;
 }
 span {
   color: #bbbbbb;
@@ -132,11 +134,12 @@ a {
 }
 #footerArea {
   position: fixed;
+  background-color: #111111dd;
   bottom: 0;
   left: 0;
   padding: 20px;
   width: 100%;
-  height: 80px;
+  height: 40px;
 }
 .menutitle {
   color: #666666;
@@ -196,7 +199,11 @@ a {
   overflow: scroll;
 }
 .nftImage {
-  width: 750px;
+  width: 600px;
+}
+.nft3DImage {
+  width: 600px;
+  height: 600px;
 }
 .nftThumbSquare {
   width: 150px; /* 正方形のサイズを指定 */
@@ -222,4 +229,46 @@ a {
 
 .floatClear {
   clear: both;
+}
+
+.BaseInput {
+  border: 1px solid #d1d1d1;
+  border-radius: 6px;
+  box-sizing: border-box;
+  font-size: 1rem;
+  padding: 12px 16px;
+  margin: 5px 5px 0 0;
+  transition: all 0.2s ease-in-out;
+}
+
+.BaseSubmit {
+  background: #3e3e3e;
+  border: 0px solid #d1d1d1;
+  border-radius: 8px;
+  padding: 15px 16px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  line-height: 1;
+  text-align: center;
+  transition: opacity 0.2s ease-in-out;
+}
+.wfull {
+  width: 99%;
+}
+.w8p {
+  width: 79%;
+}
+.w7p {
+  width: 69%;
+}
+.w5p {
+  width: 49%;
+}
+.w3p {
+  width: 29%;
+}
+.w2p {
+  width: 19%;
 }
