--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,42 @@
 body {
   background-color: #000000;
-  padding: 0;
+  padding: 0px;
   color: #888;
+  font-family: Arial, Helvetica, sans-serif;
 }
-.linknum {
-  color: #666;
-  font-size: 15px;
+html {
+  display: block;
+}
+.headerMenu {
+  font-size: 2rem;
+  font-weight: lighter;
+  background-color: #111111;
+  text-align: center;
+  white-space: nowrap;
+  overflow-x: auto;
+}
+.headerMenu a {
+  margin-left: 0.5rem;
+}
+.headerMenu a.home::before {
+  color: #aaaaaa;
+  content: "";
+  margin-right: 0.5rem;
+}
+.headerMenu a::before {
+  color: #aaaaaa;
+  content: "|";
+  margin-right: 0.5rem;
+}
+
+#headerTitle {
+  padding: 0 30px;
+}
+#langSelecter {
+  font-size: 2rem;
+  position: fixed;
+  right: 30px;
+  top: 30px;
 }
 .noview {
   color: #000;
@@ -14,31 +45,33 @@ body {
   overflow: hidden;
 }
 h1 {
-  font-size: 40px;
+  font-size: 2.2rem;
+  padding-left: 30px;
   color: #cccccc;
   span {
     color: #990000;
   }
 }
 h2 {
-  font-size: 35px;
+  font-size: 2.2rem;
   color: #dddddd;
-  margin: 10px;
 }
 h3 {
-  font-size: 20px;
+  font-size: 2rem;
   color: #cccccc;
-  margin: 10px;
 }
 h4 {
-  font-size: 20px;
+  font-size: 1.8rem;
   color: #99bb99;
-  margin: 10px;
+}
+h4 {
+  font-size: 1.6rem;
+  color: #99bb99;
 }
 p {
   color: #cccccc;
   text-decoration: none;
-  font-size: 14px;
+  line-height: 1.8;
   font-weight: normal;
 }
 span {
@@ -53,7 +86,7 @@ a {
   margin: 0 15px;
 }
 .list {
-  font-size: 50px;
+  font-size: 1.2rem;
   color: #ffffff;
   text-decoration: none;
   text-align: center;
@@ -62,7 +95,7 @@ a {
   margin: 20px 2px;
   padding: 20px;
   width: 48%;
-  font-size: 50px;
+  font-size: 1.5rem;
   color: #666666;
   background-color: #bbbbbb;
   border-radius: 20px;
@@ -71,7 +104,7 @@ a {
   margin: 20px 2px;
   padding: 20px;
   width: 32%;
-  font-size: 50px;
+  font-size: 1.5rem;
   background-color: #bbbbbb;
   border-radius: 20px;
 }
@@ -88,7 +121,6 @@ a {
   top: 15px;
   left: 20px;
   color: #aaaaaa;
-  font-size: 40px;
   font-weight: bold;
 }
 .menu-area {
@@ -96,13 +128,17 @@ a {
   top: 15px;
   right: 20px;
   color: #64a193;
-  font-size: 40px;
   font-weight: bold;
 }
 .main-content {
   width: 100%;
   margin: 100px 20px 0px 20px;
 }
+
+#mainContents > h2 {
+  padding-left: 30px;
+}
+
 .controller-adv {
   position: fixed;
   bottom: 120px;
@@ -129,7 +165,7 @@ a {
   text-align: center;
   background-color: #111111;
   color: #64a193;
-  font-size: 50px;
+  font-size: 5rem;
   font-weight: bold;
 }
 #footerArea {
@@ -139,7 +175,7 @@ a {
   left: 0;
   padding: 20px;
   width: 100%;
-  height: 40px;
+  height: 20px;
 }
 .menutitle {
   color: #666666;
@@ -171,50 +207,70 @@ a {
 .rev {
   color: #0000aa;
 }
+.nftArea {
+  margin: 10px 30px;
+}
 .childNftArea {
   width: 100%;
 }
 .childNft {
   float: left;
-  margin-right: 10px;
-  width: 170px;
-  background: #222;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px #274d7b3d;
+  width: 33.33%;
   box-sizing: border-box;
-  height: 220px;
-  margin-bottom: 10px;
-  padding: 5px 10px;
+  margin: 0 0 3px 0;
+  padding: 0 1px;
   position: relative;
   text-align: left;
   text-overflow: hidden;
   transition: all 0.2s ease-in-out;
-  width: 170;
+}
+.childNftBg {
+  padding: 5px 0;
+  width: 100%;
+  height: 395px;
+  background: #222;
+  box-shadow: 0 5px 4px #274d7b3d;
+  border-radius: 8px;
+}
+.childNftBg > a > h3 {
+  margin: 10px 5px 10px 5px;
 }
 .titleThumb {
-  font-size: 13px;
+  font-size: 1.2rem;
   font-weight: bold;
-  height: 2em;
-  line-height: 1em;
+  height: 2.8rem;
+  line-height: 1.5rem;
   overflow: scroll;
+  margin: 10px 0;
+  padding: 0 10px;
 }
 .nftImage {
-  width: 600px;
+  width: 90%;
+  max-width: 860px;
 }
 .nft3DImage {
-  width: 600px;
-  height: 600px;
+  width: 860px;
+  height: 860px;
+}
+.nftMedia {
+  width: 90%;
+  max-width: 860px;
+}
+.nftObject {
+  width: 860px;
+  height: 860px;
 }
 .nftThumbSquare {
-  width: 150px; /* 正方形のサイズを指定 */
-  height: 150px;
+  width: 100%;
+  height: 300px;
+  background-color: #111;
   overflow: hidden; /* 不要な部分を切り捨てる */
   position: relative; /* 子要素を相対的に配置するために親要素にpositionを指定 */
 }
 
 .nftThumb {
-  width: auto; /* 親要素に合わせて画像の幅を100%にする */
-  height: 100%; /* アスペクト比を維持するために高さを自動で調整 */
+  width: 100%;
+  height: 100%;
   display: block; /* 余分なスペースを削除するために画像をブロック要素として表示 */
   position: absolute; /* 画像を相対的に配置 */
   top: 50%; /* 上端を親要素の50%の位置に配置 */
@@ -223,8 +279,53 @@ a {
   object-fit: cover; /* 画像が親要素にフィットするように調整 */
 }
 
+.articleSection {
+  width: 100%;
+}
+.articleArea {
+  padding: 0 50px;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    padding: 3px 0;
+  }
+}
+.articleArea img {
+  max-width: 100%;
+}
+
+.ownerArea {
+  padding: 0 30px;
+}
+
+.donateArea {
+  padding: 0 30px;
+}
+
+.nftContractArea > h3,
+.sbtContractArea > h3 {
+  font-size: 2.5rem;
+  padding: 0 30px;
+  margin: 50px 0 0 0;
+}
+
+.creatorsLinkList {
+  font-size: 1.8rem;
+  margin: 0 30px;
+}
 .contractLinkList {
-  margin: 10px 30px;
+  font-size: 1.8rem;
+  margin: 0;
+  h3 {
+    margin: 20px 30px 10px;
+  }
+}
+.tokenBreadCrumb {
+  font-size: 1.8rem;
+  margin: 30px;
 }
 
 .floatClear {
@@ -232,20 +333,34 @@ a {
 }
 
 .BaseInput {
+  font-size: 2.2rem;
   border: 1px solid #d1d1d1;
   border-radius: 6px;
   box-sizing: border-box;
-  font-size: 1rem;
   padding: 12px 16px;
-  margin: 5px 5px 0 0;
+  margin: 20px 5px 10px 0;
+  transition: all 0.2s ease-in-out;
+}
+
+.BaseTextarea {
+  font-size: 2.2rem;
+  border: 1px solid #d1d1d1;
+  border-radius: 6px;
+  box-sizing: border-box;
+  padding: 12px 16px;
+  margin: 30px 5px 0 0;
+  height: 8rem;
+  resize: horizontal;
   transition: all 0.2s ease-in-out;
 }
 
 .BaseSubmit {
+  font-size: 2.2rem;
   background: #3e3e3e;
   border: 0px solid #d1d1d1;
   border-radius: 8px;
   padding: 15px 16px;
+  margin: 30px 5px 0 0;
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
@@ -254,6 +369,40 @@ a {
   text-align: center;
   transition: opacity 0.2s ease-in-out;
 }
+.litelink {
+  margin-left: 10px;
+  font-size: 1.5rem;
+  font-weight: lighter;
+}
+.litelink::before {
+  color: #aaaaaa;
+  content: "[";
+  margin-right: 0.2rem;
+}
+.litelink::after {
+  color: #aaaaaa;
+  content: "]";
+  margin-left: 0.2rem;
+}
+
+.mintLink {
+  color: #8888bb;
+}
+
+.attrControlLink {
+  color: #cd196a;
+}
+
+.reloadLink {
+  color: #88bb9f;
+}
+
+.copyLink {
+  margin-left: 10px;
+  font-size: 0.8rem;
+  color: #1c559f;
+}
+
 .wfull {
   width: 99%;
 }
@@ -266,9 +415,576 @@ a {
 .w5p {
   width: 49%;
 }
+.w35p {
+  width: 34%;
+}
 .w3p {
   width: 29%;
 }
 .w2p {
   width: 19%;
+}
+.controlLavel {
+  margin-top: 15px;
+  margin-bottom: 5px;
+}
+
+.custom-file-div {
+  margin: 0 5px 0 0;
+  padding: 0;
+  display: inline;
+}
+
+.custom-file-input {
+  display: none;
+}
+.custom-file-label {
+  display: inline-block;
+  padding: 8px 12px;
+  cursor: pointer;
+  background-color: #007bff;
+  color: white;
+  border-radius: 4px;
+}
+.uploadInfoArea {
+  display: block;
+  padding: 50px 0;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+}
+
+.parentTag {
+  display: inline-block;
+  color: #ffffff;
+  background: #7d043f;
+  margin-right: 5px;
+  padding: 3px 6px 16px 6px;
+  height: 25px;
+  border-radius: 4px;
+}
+.tbaTag {
+  display: inline-block;
+  color: #ffffff;
+  margin-right: 5px;
+  padding: 3px 6px 16px 6px;
+  background: #280d7a;
+  height: 25px;
+  border-radius: 4px;
+}
+.upload-confirm {
+  color: #aaaa00;
+}
+.upload-success {
+  color: #00ff00;
+}
+.upload-failed {
+  color: #ff0000;
+}
+.datetime {
+  color: #4d4a4a;
+  font-size: 0.6rem;
+}
+.walletOwnerArea {
+  display: inline-block;
+}
+.walletOwnerElement {
+  margin-right: 15px;
+  img {
+    border-radius: 15px;
+  }
+}
+.walletOwnerIcon {
+  margin-right: 5px;
+  width: 30px;
+  vertical-align: middle;
+}
+
+#meta-control {
+  padding: 0 20px;
+}
+#meta-preview {
+  background-color: #222222;
+  margin: 30px 20px;
+  padding: 30px;
+  border-radius: 20px;
+  h1 {
+    padding: 0;
+  }
+}
+
+.linkCopyElm {
+  display: inline-block;
+}
+.linkCopy {
+  font-size: 1.4rem;
+  color: #8888bb;
+}
+
+.gallaryTxtDiv {
+  font-weight: lighter;
+}
+
+.gallaryImgDiv,
+.itemImgDiv {
+  border: 5px solid #a0a0a0;
+  box-sizing: border-box;
+  width: 350px;
+  height: 350px;
+  overflow: hidden;
+  position: relative;
+  border-radius: 10px;
+  box-shadow: 0 5px 4px #0a0c0f3d;
+}
+
+.gallaryImg,
+.itemImg {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  object-fit: cover;
+  background: linear-gradient(30deg, #979191, #544f4b);
+}
+.homeContents {
+  margin: 0 30px;
+  p {
+    padding: 0 20px;
+    font-size: 1em;
+  }
+}
+
+#connectWallet {
+  p,
+  a,
+  span {
+    margin-left: 5px;
+    font-size: 1.4rem;
+  }
+}
+
+.cardContractArea {
+  display: block;
+  height: 64px;
+  margin: 30px 50px;
+  a {
+    display: flex;
+    height: 100%;
+  }
+  .cardTextArea {
+    display: inline-block;
+    height: 64px;
+    overflow: hidden;
+    padding: 0 15px;
+  }
+  h2 {
+    font-size: 1.5rem;
+    margin: 2px 0 0 0;
+    padding: 0;
+  }
+  p {
+    font-size: 1rem;
+    margin: 0;
+    padding: 0;
+  }
+  img {
+    border-radius: 6px;
+    height: 64px;
+    width: 64px;
+    -o-object-fit: cover;
+    object-fit: cover;
+  }
+  span {
+    font-size: 1rem;
+    color: #69b6b1;
+  }
+}
+
+.contentParentTitle {
+  padding: 0 30px;
+}
+
+.contentDirTitle {
+  padding: 0 40px;
+}
+.contentChildList {
+  padding: 0 60px;
+}
+.contentChildList > a {
+  margin-left: 20px;
+  color: #ffffff;
+  .ac {
+    margin-left: 3px;
+    font-size: 0.9rem;
+  }
+}
+.contentChildList {
+  color: #6f6f6f;
+}
+
+.contentDiv {
+  display: flex;
+}
+
+.itemLeftDiv {
+  p {
+    font-size: 1rem;
+    margin: 0px;
+    padding: 0;
+  }
+}
+
+.itemTxtDiv {
+  display: block;
+  margin-left: 20px;
+  width: 100%;
+  p {
+    font-size: 1rem;
+    margin: 0px;
+    padding: 0px;
+  }
+  i {
+    text-align: center;
+    vertical-align: baseline;
+    width: 30px;
+    font-size: 0.8rem;
+    color: #ffffff;
+    border: 1px solid #aaa;
+    border-radius: 5px;
+    padding: 5px 0;
+  }
+}
+.shopSiteLink {
+  display: block;
+  font-size: 1.2em;
+  margin-top: 20px;
+  padding: 10px;
+  width: 330px;
+  text-align: center;
+  background: #fff;
+  box-shadow: 0 5px 4px #274d7b3d;
+  border-radius: 10px;
+}
+.gallaryLink {
+  display: block;
+  font-size: 2rem;
+  margin-top: 20px;
+  padding: 10px;
+  width: 330px;
+  text-align: center;
+  background: #fff;
+  box-shadow: 0 5px 4px #274d7b3d;
+  border-radius: 10px;
+}
+
+.carouselProfileArea {
+  margin-bottom: 20px;
+  width: 100%;
+  background: #4d4d4d;
+  box-shadow: 0 5px 4px #1e1e1e3d;
+  border-radius: 10px;
+  overflow: scroll;
+  max-height: 250px;
+  p {
+    font-size: 1rem;
+    padding: 10px 20px;
+  }
+}
+p.carouselProfileName {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 20px 0 0 20px;
+  padding: 0px;
+}
+
+.creatorDonateHistory {
+  background: #222222;
+  width: 100%;
+  max-height: 250px;
+  box-shadow: 0 5px 4px #1e1e1e3d;
+  border-radius: 10px;
+  overflow: scroll;
+  white-space: nowrap;
+  p {
+    font-size: 1rem;
+    margin: 2px 10px;
+    padding: 0px;
+  }
+  p > span {
+    font-size: 1rem;
+    margin-left: 15px;
+  }
+}
+
+.sendDonateNftArea {
+  display: flex;
+  width: 100%;
+}
+.sendDonateFormArea {
+  width: 60%;
+}
+.sendDonateNftPreviewArea {
+  width: 40%;
+  padding: 15px 25px 0 25px;
+}
+.sendDonateNftPreviewBg {
+  width: 100%;
+  height: 100%;
+  background-color: #222;
+  box-shadow: 0 5px 4px #1e1e1e3d;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.sendNftPreviewImg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 6px;
+}
+
+.sendToUser {
+  display: flex;
+  font-size: 2rem;
+  margin-top: 30px;
+  padding-left: 10px;
+}
+
+.discordNameDisp {
+  margin-left: 15px;
+  img {
+    border-radius: 15px;
+  }
+}
+img.ownerProfPictIcon {
+  width: 128px;
+  height: 128px;
+  object-fit: cover;
+  border-radius: 15px;
+}
+img.discordIconMini {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  border-radius: 15px;
+}
+
+.mintableArea {
+  margin: 10px 30px;
+  border-radius: 15px;
+  background-color: #222;
+  .previewArea {
+    padding: 30px;
+  }
+  .mintableFormArea {
+    padding: 0 20px 20px 20px;
+  }
+
+  .loading {
+    padding: 0 20px;
+  }
+
+  .minispinner {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: 2px solid #ccc;
+    border-top-color: #00bcd4;
+    margin: 15px 10px 15px 15px;
+    animation: spin 1s linear infinite;
+    display: inline-block;
+    vertical-align: middle; /* テキストと中央揃えするため */
+  }
+}
+
+.ownTokenCaTitle {
+  font-size: 1.2rem;
+  margin: 25px 30px 10px;
+  padding: 0 0 0 0;
+}
+
+.unknownEoa {
+  color: #a200ff;
+}
+
+.unknownCa {
+  color: #ce0404;
+}
+
+i.tbamark {
+  position: absolute;
+  top: 7px;
+  left: 7px;
+  z-index: 10;
+  font-size: 20px;
+  width: 20px;
+  color: #707070;
+  background-color: #ffffff;
+  border-radius: 50%;
+  padding: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.openseaLink {
+  margin-left: 10px;
+}
+
+.priceConfirmArea {
+  font-size: 1.2rem;
+  margin-top: 30px;
+  color: #fff;
+  width: 100%;
+  text-align: center;
+}
+
+.chkprice {
+  color: #a7ff9c;
+  font-size: 1.4rem;
+}
+.chkpricemini {
+  color: #b7b25c;
+}
+.labelspan {
+  font-size: 1rem;
+  margin-top: 65px;
+  margin-left: 10px;
+}
+
+.shopInfoArea {
+  background-color: #222222;
+  margin: 10px 0px;
+  padding: 20px;
+  border-radius: 20px;
+  .shopTitle {
+    width: 100%;
+    font-size: 1.3rem;
+    margin: 0px 0px 10px 0px;
+    padding: 0px 0px 0px 0px;
+  }
+  .askDiscordBot {
+    display: flex;
+    align-items: center;
+    margin: 5px 0 0 0;
+    padding: 5px 10px;
+    font-size: 1.3rem;
+    border-radius: 10px;
+    background-color: #111;
+  }
+  .shopMainArea {
+    display: flex;
+    .shopThumbSquare {
+      width: 100px;
+      height: 100px;
+      background-color: #111;
+      overflow: hidden;
+      position: relative;
+      border-radius: 5px;
+      .shopThumb {
+        width: 100%;
+        height: 100%;
+        display: block;
+        position: absolute;
+        padding: 10px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        object-fit: cover;
+      }
+    }
+    .shopDetail {
+      margin-left: 20px;
+      p {
+        font-size: 1rem;
+        font-weight: lighter;
+        margin: 0 0 0 0;
+        padding: 0 0 0 0;
+      }
+    }
+  }
+}
+
+.accountElm {
+  display: flex;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #222;
+}
+.accountInfo {
+  font-size: 1.4rem;
+  margin-left: 20px;
+}
+
+.nftImageArea {
+  position: relative;
+}
+i.cubeMark {
+  animation: blink-animation 1s steps(5, start) infinite;
+  -webkit-animation: blink-animation 1s steps(5, start) infinite;
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  z-index: 10;
+  font-size: 60px;
+  width: 60px;
+  color: #707070;
+  background-color: #ffffff;
+  border-radius: 50%;
+  padding: 20px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+i.cubeMark2 {
+  left: 140px;
+}
+
+i.extraMark {
+  animation: blink-animation 1s steps(5, start) infinite;
+  -webkit-animation: blink-animation 1s steps(5, start) infinite;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  z-index: 10;
+  font-size: 40px;
+  width: 40px;
+  color: #707070;
+  background-color: #ffffff;
+  border-radius: 50%;
+  padding: 10px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nftExternal {
+  width: 100%;
+  min-height: 50px;
+}
+
+.commandInline {
+  background-color: #222;
+  margin: 0 5px;
+  padding: 2px 5px;
+  border-radius: 5px;
+  color: #fff;
+}
+
+.tokenOwnerInfo {
+  p,
+  a,
+  span {
+    font-size: 1.5rem;
+  }
+}
+
+span.eoaCopy {
+  margin-left: 1px;
+  color: #8888bb;
 }
