--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "KinoMT";
+  src: url("/css/KinoMT.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   background-color: #000000;
   padding: 0px;
@@ -30,6 +37,8 @@ html {
 }
 
 #headerTitle {
+  font-family: "KinoMT";
+  font-size: 3em;
   padding: 0 30px;
 }
 #langSelecter {
