--- a/public/index.html.tmpl
+++ b/public/index.html.tmpl
@@ -53,6 +53,6 @@
     </section>
   </body>
   <footer id="pageFooter">
-    <script src="/js/main.bundle.js"></script>
+    <script src="/js/main.bundle.js?ver=###VERSION###"></script>
   </footer>
 </html>
