--- a/public/index.html.tmpl
+++ b/public/index.html.tmpl
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/main.css" media="all" />
     <link rel="stylesheet" href="/css/modal.css" media="all" />
     <link rel="stylesheet" href="/css/carousel.css" media="all" />
+    <link rel="stylesheet" href="/css/rpcModal.css" media="all" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
