--- a/public/css/main.css
+++ b/public/css/main.css
@@ -180,9 +180,9 @@ a {
 #footerArea {
   position: fixed;
   background-color: #111111dd;
-  bottom: 0;
+  bottom: 0px;
   left: 0;
-  padding: 20px;
+  padding: 20px 20px 30px;
   width: 100%;
   height: 20px;
 }
