--- a/public/index.html.tmpl
+++ b/public/index.html.tmpl
@@ -3,11 +3,12 @@
   <head id="pageHeader">
     <meta charset="UTF-8" />
     <title id="pageTitle">now loading...</title>
-    <link rel="stylesheet" href="/css/reset.css" media="all" />
-    <link rel="stylesheet" href="/css/main.css" media="all" />
-    <link rel="stylesheet" href="/css/modal.css" media="all" />
-    <link rel="stylesheet" href="/css/carousel.css" media="all" />
-    <link rel="stylesheet" href="/css/rpcModal.css" media="all" />
+    <link rel="stylesheet" href="/css/reset.css?ver=###VERSION###" media="all" />
+    <link rel="stylesheet" href="/css/main.css?ver=###VERSION###" media="all" />
+    <link rel="stylesheet" href="/css/modal.css?ver=###VERSION###" media="all" />
+    <link rel="stylesheet" href="/css/carousel.css?ver=###VERSION###" media="all" />
+    <link rel="stylesheet" href="/css/rpcModal.css?ver=###VERSION###" media="all" />
+    <link rel="stylesheet" href="/css/metamaskModal.css?ver=###VERSION###" media="all" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
